--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "28.0.2"
     defaultConfig {
         applicationId "student.jnu.com.myapplication"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -25,11 +25,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.android.support:recyclerview-v7:25.2.1'
+
     compile 'com.github.clans:fab:1.6.4'
+    compile 'com.github.yuzhiqiang1993:zxing:2.2.8'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/BASE64Decoder2017.jar')
+    compile 'com.android.support:recyclerview-v7:25.2.1'
 }
